# StudentsList

./: CMakeLists.txt  README.md  StudentList.c
Inc/: Student_List.h
Src/: StudentList.c  Student_List.c
